feat(deploy-service): Changed cluster items structure of get checking report API
